btn width deletion

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&  family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -43,26 +43,26 @@
       <div class="portfolio-box">
         <ul class="btn-list">
           <li>
-            <button class="btn" width="73" type="button">Все</button>
+            <button class="btn" type="button">Все</button>
           </li>
           <li>
-            <button class="btn" width="128" typetype="button">Веб-сайты</button>
+            <button class="btn" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="btn" width="145" typetype="button">Приложения</button>
+            <button class="btn" type="button">Приложения</button>
           </li>
           <li>
-            <button class="btn" width="103" typetype="button">Дизайн</button>
+            <button class="btn" type="button">Дизайн</button>
           </li>
           <li>
-            <button class="btn" width="130" typetype="button">Маркетинг</button>
+            <button class="btn" type="button">Маркетинг</button>
           </li>
         </ul>
      
         <h2 class="visually-hidden">Portfolio list</h2>
         <ul class="folio-list" >
           <li class="card placement">
-            <img src="./img/tec-d.jpg" alt="three pictures on sceen" width="370">
+            <img class="img" src="./img/tec-d.jpg" alt="three pictures on sceen" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Технокряк</h3><p class="folio-text">Веб-сайт</p>
              </div>
@@ -74,43 +74,43 @@
               </div>
            </li>
            <li class="placement">
-              <img src="./img/res-d.jpg" alt="fish" width="370">
+              <img class="img" src="./img/res-d.jpg" alt="fish" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Ресторан Seafood</h3><p class="folio-text">Приложение</p>
               </div>
            </li>
            <li class="placement">
-              <img src="./img/pri-d.jpg" alt="headset" width="370">
+              <img class="img" src="./img/pri-d.jpg" alt="headset" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект Prime</h3><p class="folio-text">Маркетинг</p>
               </div>
            </li>
            <li class="placement">
-              <img src="./img/box-d.jpg" alt="two soaps" width="370">
+              <img class="img" src="./img/box-d.jpg" alt="two soaps" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект Boxes</h3><p class="folio-text">Приложение</p>
               </div>
            </li>
            <li class="placement">
-            <img src="./img/ins-d.jpg" alt="monitor screen" width="370">
+            <img class="img" src="./img/ins-d.jpg" alt="monitor screen" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Inspiration has no Borders</h3><p class="folio-text">Веб-сайт</p>
               </div>
            </li>
            <li class="placement">
-              <img src="./img/lim-d.jpg" alt="open book" width="370">
+              <img class="img" src="./img/lim-d.jpg" alt="open book" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Издание Limited Edition</h3><p class="folio-text">Дизайн</p>
               </div>
            </li>
            <li class="placement">
-              <img src="./img/lab-d.jpg" alt="label tag" width="370">
+              <img class="img" src="./img/lab-d.jpg" alt="label tag" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект LAB</h3><p class="folio-text">Маркетинг</p>
               </div>
            </li>
            <li class="placement">
-             <img src="./img/gro-d.jpg" alt="two hands at notebook keaboard" width="370">
+             <img class="img" src="./img/gro-d.jpg" alt="two hands at notebook keaboard" width="370">
              <div class="card-bottom">
                <h3 class="folio-title">Growing Business</h3><p class="folio-text">Приложение</p>
              </div>
