--- a/portfolio.html
+++ b/portfolio.html
@@ -14,21 +14,21 @@
 
 <body>
 
-<!-- header  -->
-   <header class="hdr">
-      <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-    <nav class="">
+  <!-- header  -->
+   <header class="hdr hdr-block">
+     <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+    <nav class="hdr-nav">
       <ul class="menu-list">
-        <li><a class="menu-link" href="./index.html">Студия</a>
+        <li><a class="menu-link bit" href="./index.html">Студия</a>
         </li>
-        <li><a class="menu-link current" href="./portfolio.html">Портфолио</a>
+        <li><a class="menu-link bit current" href="./portfolio.html">Портфолио</a>
         </li>
         <li><a class="menu-link" href="./contacts.html">Контакты</a>
         </li>
       </ul>
     </nav>
     <ul class="contact-list">
-      <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+      <li><a class="contact contact-one" href="mailto:info@devstudio.com">info@devstudio.com</a> 
       </li>
       <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
@@ -37,22 +37,22 @@
 <!--  main  -->
   <main>
     <!-- portfolio -->  
-    <section class="portfolio section">
+    <section class="portfolio ">
         <h2 class="visually-hidden">Portfolio</h2>
      
       <div class="portfolio-box">
         <ul class="btn-list">
           <li>
-            <button class="btn" type="button">Все</button>
+            <button class="btn btn-block" type="button">Все</button>
           </li>
           <li>
-            <button class="btn" type="button">Веб-сайты</button>
+            <button class="btn btn-block" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="btn" type="button">Приложения</button>
+            <button class="btn btn-block" type="button">Приложения</button>
           </li>
           <li>
-            <button class="btn" type="button">Дизайн</button>
+            <button class="btn btn-block" type="button">Дизайн</button>
           </li>
           <li>
             <button class="btn" type="button">Маркетинг</button>
@@ -60,56 +60,56 @@
         </ul>
      
         <h2 class="visually-hidden">Portfolio list</h2>
-        <ul class="folio-list" >
-          <li class="card placement">
+        <ul class="folio-list folio-list-block" >
+          <li class="card">
             <img class="img" src="./img/tec-d.jpg" alt="three pictures on sceen" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Технокряк</h3><p class="folio-text">Веб-сайт</p>
              </div>
           </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/pos-d.jpg" alt="two boys and ball" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Постер New Orlean vs Golden Star</h3><p class="folio-text">Дизайн</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/res-d.jpg" alt="fish" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Ресторан Seafood</h3><p class="folio-text">Приложение</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/pri-d.jpg" alt="headset" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект Prime</h3><p class="folio-text">Маркетинг</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/box-d.jpg" alt="two soaps" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект Boxes</h3><p class="folio-text">Приложение</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
             <img class="img" src="./img/ins-d.jpg" alt="monitor screen" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Inspiration has no Borders</h3><p class="folio-text">Веб-сайт</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/lim-d.jpg" alt="open book" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Издание Limited Edition</h3><p class="folio-text">Дизайн</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
               <img class="img" src="./img/lab-d.jpg" alt="label tag" width="370">
               <div class="card-bottom">
                 <h3 class="folio-title">Проект LAB</h3><p class="folio-text">Маркетинг</p>
               </div>
            </li>
-           <li class="placement">
+           <li class="card">
              <img class="img" src="./img/gro-d.jpg" alt="two hands at notebook keaboard" width="370">
              <div class="card-bottom">
                <h3 class="folio-title">Growing Business</h3><p class="folio-text">Приложение</p>
@@ -121,14 +121,14 @@
 
   </main>
   
-<!--  footer  -->  
- <footer class="ftr">
+ <!--  footer  -->  
+ <footer class="ftr ">
   <div class="ftr-box">
-    <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
+    <a class="logo ftr-logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
     <address class="addr">
       <ul class="ftr-addr-list">
-        <li><a class="ftr-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a class="ftr-addr" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="ftr-addr-item "><a class="ftr-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li class="ftr-addr-item"><a class="ftr-addr" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="ftr-addr" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
