--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 </head>
 <body>
 
-<!-- header  -->
-   <header class="hdr container">
+  <!-- header  -->
+   <header class="hdr hdr-block">
      <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-    <nav class="">
+    <nav class="hdr-nav">
       <ul class="menu-list">
-        <li><a class="menu-link current" href="./index.html">Студия</a>
+        <li><a class="menu-link bit current" href="./index.html">Студия</a>
         </li>
-        <li><a class="menu-link" href="./portfolio.html">Портфолио</a>
+        <li><a class="menu-link bit" href="./portfolio.html">Портфолио</a>
         </li>
         <li><a class="menu-link" href="./contacts.html">Контакты</a>
         </li>
       </ul>
     </nav>
     <ul class="contact-list">
-      <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+      <li><a class="contact contact-one" href="mailto:info@devstudio.com">info@devstudio.com</a> 
       </li>
       <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
 
-<!--  main  -->
+ <!--  main  -->
   <main>
     <section class="hero" >
       <div class="hero-box">
@@ -45,18 +45,18 @@
     <section class="plan ">
      <div class="plan-box">
       <h2 class="visually-hidden">План</h2>
-      <ul class="plan-list">
-        <li class="plan-item placement">
+      <ul class="plan-list plan-list-block">
+        <li class="plan-item">
           <h3 class="plan-item-title title">Внимание к деталям</h3>
           <p class="plan-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li class="plan-item placement">
+        <li class="plan-item">
           <h3 class="plan-item-title title">Пунктуальность</h3>
           <p class="plan-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-        <li class="plan-item placement">
+        <li class="plan-item">
           <h3 class="plan-item-title title ">Планирование</h3>
           <p class="plan-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-        <li class="plan-item placement">
+        <li class="plan-item">
           <h3 class="plan-item-title title">Современные технологии</h3>
           <p class="plan-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
       </ul>
@@ -65,13 +65,13 @@
 
     <section class="deal">
      <div class="deal-box">
-      <h2 class="deal-title title">Чем мы занимаемся</h2>
-      <ul class="deal-list">
-        <li class="deal-item placement"><img src="./img/tblt.jpg" alt="tablett" width="370" >
+      <h2 class="deal-title title deal-title-block">Чем мы занимаемся</h2>
+      <ul class="deal-list deal-list-block">
+        <li class="deal-item placement"><img class="img" src="./img/tblt.jpg" alt="tablett" width="370" >
         </li>
-        <li class="deal-item placement"><img src="./img/smart.jpg" alt="smartphone" width="370"> 
+        <li class="deal-item placement"><img class="img" src="./img/smart.jpg" alt="smartphone" width="370"> 
         </li>
-        <li class="deal-item  placement"><img src="./img/desct.jpg" alt="desctop" width="370" >
+        <li class="deal-item  placement"><img class="img" src="./img/desct.jpg" alt="desctop" width="370" >
         </li>
       </ul>
      </div>
@@ -79,32 +79,32 @@
 
     <section class="team">
      <div class="team-box">
-      <h2 class="team-title title">Наша команда</h2>
-      <ul class="team-list">
-        <li class="team-item placement"><img src="./img/dem-d.jpg" alt="Игорь Демьяненко" width="270"><div class=""><h3 class="team-item-title">Игорь Демьяненко</h3>
+      <h2 class="team-title title team-title-block">Наша команда</h2>
+      <ul class="team-list team-list-block">
+        <li class="team-item placement"><img class="img" src="./img/dem-d.jpg" alt="Игорь Демьяненко" width="270"><div class=""><h3 class="team-item-title">Игорь Демьяненко</h3>
           <p class="team-item-text">Product Designer</p></div></li>
 
-        <li class="team-item placement"><img src="./img/rep-d.jpg" alt="Ольга Репина" width="270"><div class=""><h3 class="team-item-title">Ольга Репина</h3>
+        <li class="team-item placement"><img class="img" src="./img/rep-d.jpg" alt="Ольга Репина" width="270"><div class=""><h3 class="team-item-title">Ольга Репина</h3>
           <p class="team-item-text">Frontend Developer</p></div></li>
 
-        <li class="team-item placement"><img src="./img/tar-d.jpg" alt="Николай Тарасов" width="270"><div class=""><h3 class="team-item-title">Николай Тарасов</h3>
+        <li class="team-item placement"><img class="img" src="./img/tar-d.jpg" alt="Николай Тарасов" width="270"><div class=""><h3 class="team-item-title">Николай Тарасов</h3>
           <p class="team-item-text">Marketing</p></div></li>
 
-        <li class="team-item placement"><img src="./img/yer-d.jpg" alt="Михаил Ермаков" width="270"><div class=""><h3 class="team-item-title">Михаил Ермаков</h3>
+        <li class="team-item placement"><img class="img" src="./img/yer-d.jpg" alt="Михаил Ермаков" width="270"><div class=""><h3 class="team-item-title">Михаил Ермаков</h3>
           <p class="team-item-text">UI Designer</p></div></li>
       </ul>
      </div>
     </section>
   </main>
   
-<!--  footer  -->  
+ <!--  footer  -->  
  <footer class="ftr ">
   <div class="ftr-box">
-    <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
+    <a class="logo ftr-logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
     <address class="addr">
       <ul class="ftr-addr-list">
-        <li><a class="ftr-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a class="ftr-addr" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="ftr-addr-item "><a class="ftr-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li class="ftr-addr-item"><a class="ftr-addr" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="ftr-addr" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
