--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Studio</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
   <!-- header  -->
-   <header class="hdr hdr-block">
+   <header class="header header-block container">
      <a class="logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
     <nav class="hdr-nav">
       <ul class="menu-list">
@@ -36,14 +38,14 @@
  <!--  main  -->
   <main>
     <section class="hero" >
-      <div class="hero-box">
+      <div class="container hero-block">
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
         <button class="prime-btn" type="button">Заказать услугу</button>
       </div>
     </section>
 
-    <section class="plan ">
-     <div class="plan-box">
+    <section class="plan section">
+     <div class="container">
       <h2 class="visually-hidden">План</h2>
       <ul class="plan-list plan-list-block">
         <li class="plan-item">
@@ -63,8 +65,8 @@
      </div>
     </section>
 
-    <section class="deal">
-     <div class="deal-box">
+    <section class="deal section">
+     <div class="container">
       <h2 class="deal-title title deal-title-block">Чем мы занимаемся</h2>
       <ul class="deal-list deal-list-block">
         <li class="deal-item placement"><img class="img" src="./img/tblt.jpg" alt="tablett" width="370" >
@@ -77,8 +79,8 @@
      </div>
     </section>
 
-    <section class="team">
-     <div class="team-box">
+    <section class="team section">
+     <div class="container">
       <h2 class="team-title title team-title-block">Наша команда</h2>
       <ul class="team-list team-list-block">
         <li class="team-item placement"><img class="img" src="./img/dem-d.jpg" alt="Игорь Демьяненко" width="270"><div class=""><h3 class="team-item-title">Игорь Демьяненко</h3>
@@ -98,14 +100,14 @@
   </main>
   
  <!--  footer  -->  
- <footer class="ftr ">
-  <div class="ftr-box">
-    <a class="logo ftr-logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
-    <address class="addr">
-      <ul class="ftr-addr-list">
-        <li class="ftr-addr-item "><a class="ftr-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li class="ftr-addr-item"><a class="ftr-addr" href="mailto:info@example.com">info@example.com</a></li>
-        <li><a class="ftr-addr" href="tel:+380961111111">+38 096 111 11 11</a></li>
+ <footer class="footer ">
+  <div class="container">
+    <a class="logo footer-logo" href="./index.html"><span class="logo-web">Web</span><span class="studio">Studio</span></a>
+    <address>
+      <ul class="footer-address-list">
+        <li class="footer-address-item "><a class="footer-address-link-one" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li class="footer-address-item"><a class="footer-address-link" href="mailto:info@example.com">info@example.com</a></li>
+        <li><a class="footer-address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </div>
